<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ToddzEducation</string>
    <string name="which_animal_lays_eggs" translatable="false" tools:ignore="MissingTranslation">Which animal lays eggs?</string>
    <string name="_7_10" translatable="false">7/10</string>
    <string name="_60" translatable="false">60</string>
    <string name="dog" translatable="false">Dog</string>
    <string name="Cat" translatable="false" />
    <string name="duck" translatable="false">Duck</string>
    <string name="sheep" translatable="false">Sheep</string>
    <string name="cat" translatable="false">Cat</string>
    <string name="next_question" translatable="false">next question</string>
    <string name="previous_question" translatable="false">previous question</string>
    <string name="hint" translatable="false">Hint</string>
    <string name="audio" translatable="false">Text-to-speech audio</string>
    <string name="take_to_profile_picture">Take to profile picture</string>
    <string name="go_to_leaderboard_tab">Go to leaderboard tab</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="go_to_subjects_tab">Go to subjects tab</string>
    <string name="subjects">SUBJECTS</string>
    <string name="english">English</string>
    <string name="mathematics">Mathematics</string>
    <string name="science">Science</string>
    <string name="history">History</string>
    <string name="geography">Geography</string>
    <string name="toddz">Toddz</string>
    <string name="correct">Correct. . . . . . . . . .</string>
    <string name="incorrect">Incorrect. . . . . . . . . .</string>
    <string name="new_score">New Score. . . . .</string>
    <string name="_8_10">8/10</string>
    <string name="_2_10">2/10</string>
    <string name="_105_pts">105 pts</string>
    <string name="go_to_solutions">Go To Solutions</string>
    <string name="take_quiz_again">take quiz again</string>
    <string name="go_to_home_page">Go to home page</string>
    <string name="all_birds_fish_and_reptiles_lay_eggs">All birds, fish, and reptiles lay eggs!</string>
    <string name="log_out">Log Out</string>
    <string name="back_button">Back button</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="login9">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="signup">Signup</string>
    <string name="enter_password_again">Enter Password again</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_accoount_click_here">Already have an accoount? Click here!</string>
    <string name="quizzmap">quizmap</string>
    <string name="todo1">TODO</string>
    <string name="quiz_map">Quiz Map</string>
    <string name="student">Student</string>
    <string name="welcome2">Welcome,</string>
    <string name="next">Next</string>
    <string name="how_would_you_describe_yourself">How would you describe yourself</string>
    <string name="back_button_description">Go back</string>
    <string name="Quiz1_sol">Quiz#1 Solution</string>
    <string name="question_count">Question 7 of 10</string>
    <string name="question">Which animal lays eggs?</string>
    <string name="your_answer">Your Answer</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="play_audio">Play audio explanation</string>
    <string name="Explanation_">Explanation</string>
    <string name="explanation">Monotremes are mammals that lay eggs rather than bear live young. Birds, like ducks, chickens or geese lay eggs.</string>
    <string name="previous">Previous</string>

</resources>