<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolutionActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="454dp"
        android:layout_height="90dp"
        android:background="#FFFFFF"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:background="@drawable/back"
            android:contentDescription="@string/back_button_description" />

        <TextView
            android:id="@+id/quiz_header"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-1dp"
            android:layout_toEndOf="@id/back_button"
            android:fontFamily="@font/maven_pro"
            android:gravity="center"
            android:text="@string/Quiz1_sol"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:background="#FCC9EB"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:background="@drawable/rounded_corner"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maven_pro"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/question_count"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/maven_pro"
                android:gravity="center"
                android:text="@string/question"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="481dp"
        android:layout_marginTop="215dp"
        android:background="#FCC9EB"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/maven_pro"
            android:gravity="start"
            android:text="@string/your_answer"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/your_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_outline_red"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="16dp"
            android:text="@string/cat"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/maven_pro"
            android:gravity="start"
            android:text="@string/correct_answer"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/correct_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_outline_green"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="16dp"
            android:text="@string/duck"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/maven_pro"
            android:gravity="start"
            android:textColor="@color/black"
            android:text="@string/Explanation_"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="229dp"
            android:background="@drawable/rounded_corner"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maven_pro"
                android:gravity="start"
                android:textColor="@color/black"
                android:text="@string/explanation"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/play_audio"
               />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="90dp"
        android:layout_marginTop="699dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="#FCC9EB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:background="@drawable/previousbtn_icon"
            android:contentDescription="@string/previous"
            android:padding="32dp" />

        <ImageButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/nextbtn_icon"
            android:contentDescription="@string/next"
            android:padding="32dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>