<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">


    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/txtbackcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtwhitecontainer"
        android:layout_width="290dp"
        android:layout_height="619dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imagebtnProfile"
        android:layout_width="180dp"
        android:layout_height="152dp"
        android:background="@color/white"
        android:contentDescription="@string/take_to_profile_picture"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/score1txt"
        app:layout_constraintEnd_toEndOf="@+id/txtwhitecontainer"
        app:layout_constraintStart_toStartOf="@+id/txtwhitecontainer"
        app:layout_constraintTop_toTopOf="@+id/txtwhitecontainer"
        app:layout_constraintVertical_bias="0.181"
        app:srcCompat="@drawable/cat_profile" />

    <TextView
        android:id="@+id/score1txt"
        android:layout_width="170dp"
        android:layout_height="27dp"
        android:fontFamily="@font/maven_pro_medium"
        android:text="@string/correct"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtwhitecontainer"
        app:layout_constraintEnd_toEndOf="@+id/txtwhitecontainer"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="@+id/txtwhitecontainer"
        app:layout_constraintTop_toTopOf="@+id/txtwhitecontainer"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/score2txt"
        android:layout_width="183dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/maven_pro_medium"
        android:text="@string/incorrect"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtwhitecontainer"
        app:layout_constraintEnd_toEndOf="@+id/txtwhitecontainer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtwhitecontainer"
        app:layout_constraintTop_toTopOf="@+id/txtwhitecontainer"
        app:layout_constraintVertical_bias="0.608" />

    <TextView
        android:id="@+id/score3txt"
        android:layout_width="166dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/maven_pro_medium"
        android:text="@string/new_score"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtwhitecontainer"
        app:layout_constraintEnd_toEndOf="@+id/txtwhitecontainer"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/txtwhitecontainer"
        app:layout_constraintTop_toTopOf="@+id/txtwhitecontainer"
        app:layout_constraintVertical_bias="0.707" />

    <TextView
        android:id="@+id/score1"
        android:layout_width="66dp"
        android:layout_height="30dp"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/maven_pro_medium"
        android:text="@string/_8_10"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtwhitecontainer"
        app:layout_constraintEnd_toEndOf="@+id/txtwhitecontainer"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="@+id/txtwhitecontainer"
        app:layout_constraintTop_toTopOf="@+id/txtwhitecontainer"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/score2"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:fontFamily="@font/maven_pro_medium"
        android:text="@string/_2_10"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtwhitecontainer"
        app:layout_constraintEnd_toEndOf="@+id/txtwhitecontainer"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="@+id/txtwhitecontainer"
        app:layout_constraintTop_toTopOf="@+id/txtwhitecontainer"
        app:layout_constraintVertical_bias="0.559" />

    <TextView
        android:id="@+id/score3"
        android:layout_width="85dp"
        android:layout_height="31dp"
        android:fontFamily="@font/maven_pro_medium"
        android:text="@string/_105_pts"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtwhitecontainer"
        app:layout_constraintEnd_toEndOf="@+id/txtwhitecontainer"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="@+id/txtwhitecontainer"
        app:layout_constraintTop_toTopOf="@+id/txtwhitecontainer"
        app:layout_constraintVertical_bias="0.646" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="234dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtwhitecontainer"
        app:layout_constraintEnd_toEndOf="@+id/txtwhitecontainer"
        app:layout_constraintStart_toStartOf="@+id/txtwhitecontainer"
        app:layout_constraintTop_toTopOf="@+id/txtwhitecontainer"
        app:layout_constraintVertical_bias="0.344"
        app:srcCompat="@drawable/congrats_text" />

    <ImageView
        android:id="@+id/imageconfetti"
        android:layout_width="388dp"
        android:layout_height="347dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/confettiparty" />

    <ImageButton
        android:id="@+id/btnRetake"
        android:layout_width="97dp"
        android:layout_height="82dp"
        android:background="@color/white"
        android:contentDescription="@string/take_quiz_again"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/txtwhitecontainer"
        app:layout_constraintEnd_toEndOf="@+id/txtwhitecontainer"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="@+id/txtwhitecontainer"
        app:layout_constraintTop_toTopOf="@+id/txtwhitecontainer"
        app:layout_constraintVertical_bias="0.832"
        app:srcCompat="@drawable/retakebtn" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:contentDescription="@string/go_to_home_page"
        android:background="@color/white"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/txtwhitecontainer"
        app:layout_constraintEnd_toEndOf="@+id/txtwhitecontainer"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="@+id/txtwhitecontainer"
        app:layout_constraintTop_toTopOf="@+id/txtwhitecontainer"
        app:layout_constraintVertical_bias="0.831"
        app:srcCompat="@drawable/gotohomebtn" />

    <Button
        android:id="@+id/btnSolution"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:fontFamily="@font/maven_pro_medium"
        android:text="@string/go_to_solutions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/btn_solution_bg"
        app:layout_constraintBottom_toBottomOf="@+id/txtwhitecontainer"
        app:layout_constraintEnd_toEndOf="@+id/txtwhitecontainer"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/txtwhitecontainer"
        app:layout_constraintTop_toTopOf="@+id/txtwhitecontainer"
        app:layout_constraintVertical_bias="0.958" />

</androidx.constraintlayout.widget.ConstraintLayout>

