<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Welcome">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maven_pro"
        android:text="Welcome"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/maven_pro"
        android:text="@string/how_would_you_describe_yourself"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/grey"
            android:fontFamily="@font/maven_pro"
            android:outlineAmbientShadowColor="#FFEF9F"
            android:text="@string/student"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="32sp"
            app:layout_constraintBottom_toTopOf="@+id/radioButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginBottom="44dp"
            android:fontFamily="@font/maven_pro"
            android:text="Teacher"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="32sp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginBottom="172dp"
        android:text="@string/next"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>